0.83.8
  - Configuration Tool now provides the option to save
    to the primary or user config files. (Wengier)
  - The config option "pixelshader" is moved from the
    section [gui] to [render] so that it will be in the
    same section as the option "glshader". (Wengier)
  - Added menu item "Select OpenGL (GLSL) shader..." to
    allow OpenGL shader switch from the menu, just like
    the function for Direct3D pixel shaders. (Wengier)
  - Added menu item "Show IDE disk or CD status" under
    "DOS" menu to show the current assignments (disk or
    CD image) of the IDE controllers. (Wengier)
  - Fixed IDE CD assignment may not be reset when soft
    reboots are activated from guest systems. (Wengier)
  - Enhanced MODE command so that you can change the
    number of columns and lines in the screen with the
    syntax "MODE CON COLS=c LINES=n" (c=80 or 132, and
    n=25, 43, 50, or 60). The command "MODE CON" will
    show the current number of columns and lines in the
    screen as in a real DOS system. (Wengier)
  - Added FLAGSAVE command for the save state feature
    to flag (mark) one or more files to be saved and
    loaded. Type "FLAGSAVE /?" for more information on
    this command. (PogoMan361 and Wengier)
  - Enhanced A20GATE command to show the current status
    of the A20 gate when no parameter is given, along
    with other small improvements. (Wengier)
  - INT 21h DOS=HMA emulation, to enable the A20 gate,
    and autoa20fix, to disable the A20 gate, now checks
    whether the CPU is running in virtual 8086 mode.
    If vm86 detected, the code will control the A20
    gate by calling the XMS interface instead of direct
    reading/writing via port 92h. This consideration
    is required for autoa20fix to cooperate with
    Microsoft Windows 3.1. Note that Windows 3.1 does
    not virtualize port 92h. If it did, this workaround
    would not be necessary.
  - Added -a option to LOADFIX command which will auto