@@ -178,6 +178,8 @@ logfile     =
 #                                        captures: Directory where things like wave, midi, screenshot get captured.
 #                                        saveslot: Select the default save slot (1-100) to save/load states.
 #                                        savefile: Select the default save file to save/load states. If specified it will be used instead of the save slot.
+#                                      saveremark: If set, the save state feature will ask users to enter remarks when saving a state.
+#                                  forceloadstate: If set, DOSBox-X will load a saved state even if it finds there is a mismatch in the DOSBox-X version, machine type, program name and/or the memory size.
 #DOSBOX-X-ADV:#                  skip encoding unchanged frames: Unchanged frames will not be sent to the video codec as a possible performance and bandwidth optimization.
 #DOSBOX-X-ADV:#                           capture chroma format: Chroma format to use when capturing to H.264. 'auto' picks the best quality option.
 #DOSBOX-X-ADV:#                                                    4:4:4       Chroma is at full resolution. This provides the best quality, however not widely supported by editing software.
@@ -352,6 +354,8 @@ machine                                         = svga_s3
 captures                                        = capture
 saveslot                                        = 1
 savefile                                        = 
+saveremark                                      = true
+forceloadstate                                  = false
 #DOSBOX-X-ADV:skip encoding unchanged frames                  = false
 #DOSBOX-X-ADV:capture chroma format                           = auto
 #DOSBOX-X-ADV:capture format                                  = default
