@@ -90,6 +90,8 @@ logfile =
 #              captures: Directory where things like wave, midi, screenshot get captured.
 #              saveslot: Select the default save slot (1-100) to save/load states.
 #              savefile: Select the default save file to save/load states. If specified it will be used instead of the save slot.
+#            saveremark: If set, the save state feature will ask users to enter remarks when saving a state.
+#        forceloadstate: If set, DOSBox-X will load a saved state even if it finds there is a mismatch in the DOSBox-X version, machine type, program name and/or the memory size.
 #               memsize: Amount of memory DOSBox-X has in megabytes.
 #                          This value is best left at its default to avoid problems with some games,
 #                          although other games and applications may require a higher value.
@@ -110,6 +112,8 @@ machine               = svga_s3
 captures              = capture
 saveslot              = 1
 savefile              = 
+saveremark            = true
+forceloadstate        = false
 memsize               = 16
 nocachedir            = false
 freesizecap           = cap
